fix: piece justificative file content